# Differential-privacy

./: .gitignore  LICENSE  README.md  cli.py  defaults.py  differential_privacy.ipynb  differential_privacy_insurance  dp_cli.py  dp_refactored.py  gui.py  io_utils.py  mechanisms.py  privacy_checks.py  pyproject.toml  report.md  requirements.txt
notebooks/: dp_privacy_insurance.ipynb
reports/: findings_report.md
src/dp/: __init__.py  constants.py  dpsgd.py  evaluation.py  mechanisms.py  models.py  pipeline.py
tests/: test_cli.py  test_mechanisms.py  test_privacy_checks.py
